✨ feat: implements voting logic
