# internal/entities/list.go
@@ -8,8 +8,9 @@ import (
 
 type List struct {
 	SharedEntity
-	Name   string  `json:"name"`
-	Movies []Movie `json:"movies"`
+	Name         string        `json:"name"`
+	Movies       []Movie       `json:"movies"`
+	Combinations []Combination `json:"combinations"`
 }
 
 func NewList(name string) (*List, []util.ProblemDetails) {
@@ -23,4 +24,12 @@ func (l *List) AddMovies(movies []Movie) {
 	timeNow := time.Now()
 	l.Movies = append(l.Movies, movies...)
 	l.UpdatedAt = timeNow
+}
+
+func (l *List) ClearMovies() {
+	l.Movies = []Movie{}
+}
+
+func (l *List) AddCombinations(combinations []Combination) {
+	l.Combinations = append(l.Combinations, combinations...)
 }
