# internal/infrastructure/repositories_implementation/models.go
@@ -20,7 +20,7 @@ type Lists struct {
 	Votes         []Votes    `gorm:"foreignKey:ListID"`
 }
 
-func (m *Lists) ToEntity(movies []entities.Movie) *entities.List {
+func (m *Lists) ToEntity(movies []entities.Movie, combinations []entities.Combination) *entities.List {
 	return &entities.List{
 		SharedEntity: entities.SharedEntity{
 			ID:            m.ID,
@@ -29,25 +29,26 @@ func (m *Lists) ToEntity(movies []entities.Movie) *entities.List {
 			UpdatedAt:     m.UpdatedAt,
 			DeactivatedAt: m.DeactivatedAt,
 		},
-		Name:   m.Name,
-		Movies: movies,
+		Name:         m.Name,
+		Movies:       movies,
+		Combinations: combinations,
 	}
 }
 
 type Movies struct {
-	ID            string     `gorm:"primaryKey;not null"`
-	Active        bool       `gorm:"not null"`
-	CreatedAt     time.Time  `gorm:"not null"`
-	UpdatedAt     time.Time  `gorm:"not null"`
-	DeactivatedAt *time.Time `gorm:"default:NULL"`
-	Name          string     `gorm:"not null"`
-	Year          int64      `gorm:"not null"`
-	Poster        string     `gorm:"not null"`
-	ExternalID    string     `gorm:"not null"`
-	Lists         []Lists    `gorm:"many2many:list_movies;"`
-	FirstVotes    []Votes    `gorm:"foreignKey:FirstMovieID"`
-	SecondVotes   []Votes    `gorm:"foreignKey:SecondMovieID"`
-	WinnerVotes   []Votes    `gorm:"foreignKey:WinnerID"`
+	ID            string         `gorm:"primaryKey;not null"`
+	Active        bool           `gorm:"not null"`
+	CreatedAt     time.Time      `gorm:"not null"`
+	UpdatedAt     time.Time      `gorm:"not null"`
+	DeactivatedAt *time.Time     `gorm:"default:NULL"`
+	Name          string         `gorm:"not null"`
+	Year          int64          `gorm:"not null"`
+	Poster        string         `gorm:"not null"`
+	ExternalID    string         `gorm:"not null"`
+	Lists         []Lists        `gorm:"many2many:list_movies;"`
+	FirstVotes    []Combinations `gorm:"foreignKey:FirstMovieID"`
+	SecondVotes   []Combinations `gorm:"foreignKey:SecondMovieID"`
+	WinnerVotes   []Votes        `gorm:"foreignKey:WinnerID"`
 }
 
 func (m *Movies) ToEntity() *entities.Movie {
@@ -83,10 +84,8 @@ type Votes struct {
 	DeactivatedAt *time.Time `gorm:"default:NULL"`
 	ListID        string     `gorm:"not null"`
 	List          Lists      `gorm:"foreignKey:ListID"`
-	FirstMovieID  string     `gorm:"not null"`
-	FirstMovie    Movies     `gorm:"foreignKey:FirstMovieID"`
-	SecondMovieID string     `gorm:"not null"`
-	SecondMovie   Movies     `gorm:"foreignKey:SecondMovieID"`
+	UserID        string     `gorm:"not null"`
+	CombinationID string     `gorm:"not null"`
 	WinnerID      string     `gorm:"not null"`
 	Winner        Movies     `gorm:"foreignKey:WinnerID"`
 }
@@ -100,10 +99,29 @@ func (v *Votes) ToEntity() *entities.Vote {
 			UpdatedAt:     v.UpdatedAt,
 			DeactivatedAt: v.DeactivatedAt,
 		},
+		UserID:        v.UserID,
+		CombinationID: v.CombinationID,
 		ListID:        v.ListID,
-		FirstMovieID:  v.FirstMovieID,
-		SecondMovieID: v.SecondMovieID,
 		WinnerID:      v.WinnerID,
+	}
+}
+
+type Combinations struct {
+	ID            string `gorm:"primaryKey;not null"`
+	ListID        string `gorm:"not null"`
+	List          Lists  `gorm:"foreignKey:ListID"`
+	FirstMovieID  string `gorm:"not null"`
+	FirstMovie    Movies `gorm:"foreignKey:FirstMovieID"`
+	SecondMovieID string `gorm:"not null"`
+	SecondMovie   Movies `gorm:"foreignKey:SecondMovieID"`
+}
+
+func (c *Combinations) ToEntity() *entities.Combination {
+	return &entities.Combination{
+		ID:            c.ID,
+		ListID:        c.ListID,
+		FirstMovieID:  c.FirstMovieID,
+		SecondMovieID: c.SecondMovieID,
 	}
 }
 
@@ -113,6 +131,7 @@ func Migration(db *gorm.DB, sqlDB *sql.DB) {
 		Movies{},
 		ListMovies{},
 		Votes{},
+		Combinations{},
 	); err != nil {
 		fmt.Println("Error during migration:", err)
 		return
